examples/error/hierachical_modelling/mbsimError/error-HTMLFILELINE.errorOutput
<span class="MBXMLUTILS_ERROROUTPUT"><a href="submodel/Untergruppe.xml?line=10">submodel/Untergruppe.xml:10:/Group[1]/objects[1]/RigidBody[1]</a><br/><span class="MBXMLUTILS_MSG">The diagonal elements of the inertia tensor must be nonnegative.
(At MBSim element /Group[Hauptgruppe1]/Group[Untergruppe]/Object[Box1])
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="Hauptgruppe.xml?line=38">Hauptgruppe.xml:38:/Group[1]/groups[1]/p:Embed[2]</a> [ecount=<span class="MBXMLUTILS_ECOUNT">1</span>]<br/><span class="MBXMLUTILS_MSG">included from here
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsim.xml?line=18">MBS.mbsim.xml:18:/DynamicSystemSolver[1]/groups[1]/p:Embed[1]</a> [ecount=<span class="MBXMLUTILS_ECOUNT">1</span>]<br/><span class="MBXMLUTILS_MSG">included from here
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsx?line=8">MBS.mbsx:8:/p:Embed[1]/mx:MBSimProject[1]/p:Embed[1]</a> [ecount=<span class="MBXMLUTILS_ECOUNT">1</span>]<br/><span class="MBXMLUTILS_MSG">included from here</span></span>
